...
              height: 12,
            )
          ],
        ),
      ),
      floatingActionButton: FloatingActionButton(
        key: const ValueKey("floatingActionButtonKey"),
        child: Icon(
          Icons.add_circle_outline_sharp,
          color: Theme.of(context).colorScheme.inverseSurface,
        ),
        onPressed: () {
          AddTimerModal().showAddTimerModalSheet(context);
...
